# shop-asset-pipeline

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
src/shop_pipeline/: __init__.py  config.py  image_utils.py  logging_setup.py  pipeline.py  public_upload.py  scene_modes.py
src/shop_pipeline/clients/: __init__.py  dashscope_client.py  kling_client.py  minimax_image_client.py
src/shop_pipeline/prompts/: __init__.py  clothing.py  electronics.py  food.py  general.py
src/shop_pipeline/steps/: generate_scene.py  generate_video.py  postprocess.py  remove_bg.py
tests/: test_config.py  test_dashscope_client.py  test_generate_scene.py  test_generate_video.py  test_kling_client.py  test_logging.py  test_minimax_image_client.py  test_pipeline.py  test_postprocess.py  test_prompts.py  test_public_upload.py  test_remove_bg.py  test_scene_modes.py
